--- a/src/app/inside/manage/product/detail/detail.component.html
+++ b/src/app/inside/manage/product/detail/detail.component.html
@@ -33,35 +33,71 @@
                 <div class="col-md-8">
                     <div class="boxShadow">
                         <form>
-                            <div class="form-group">
-                                <label>Category</label>
-                                <input class="form-control" [value]="this.productData.category['categoryName']" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label>Name</label>
-                                <input class="form-control" [value]="this.productData.productName" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label>Description</label>
-                                <textarea class="form-control" cols="10" rows="5" [value]="this.productData.description" readonly></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label>Price</label>
-                                <input class="form-control" [value]="this.productData.productPrice" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label>Amount</label>
-                                <input class="form-control" [value]="this.productData.totalProduct" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label>Thumbnail</label>
-                                <div class="display-thumbnail">
-                                    <img width="80%" src="{{this.productData.imageProduct}}" alt="">
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Seller: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">{{getSellerName(this.productData.accountId)}}
+                                    </div>
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label>Image List</label>
-                                <div class="col-md-12 row">
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Category: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">{{this.productData.category['categoryName']}}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Name: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">{{this.productData.productName}}</div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Description: </div>
+                                </div>
+                                <div class="col-md-10">
+                                    <textarea class="form-control detail-value" cols="10" rows="5" [value]="this.productData.description"></textarea>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Price: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">${{this.productData.productPrice}}</div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Amount: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">{{this.productData.totalProduct}}</div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Thumbnail: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="display-thumbnail">
+                                        <img width="80%" src="{{this.productData.imageProduct}}" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Image List: </div>
+                                </div>
+                                <div class="col-auto row">
                                     <ngx-dropzone-preview *ngFor="let url of urls">
                                         <ngx-dropzone-label>
                                             <img width="90%" src="{{url}}" alt="">
@@ -69,9 +105,37 @@
                                     </ngx-dropzone-preview>
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label>Status</label>
-                                <input class="form-control" [value]="this.productData.status" readonly>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Status: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">{{this.productData.status}}</div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Hot Product Status: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">{{this.productData.hotProductStatus}}</div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Created At: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">{{this.productData.createdAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <div class="title-detail-form">Updated At: </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="form-control detail-value">{{this.productData.updatedAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</div>
+                                </div>
                             </div>
                         </form>
                     </div>
