--- a/src/app/inside/manage/user/user.component.html
+++ b/src/app/inside/manage/user/user.component.html
@@ -61,7 +61,7 @@
                                         <td *ngIf="item.status ==='Deactive'"><span class="status-p bg-danger">Deactive</span></td>
                                         <td>
                                             <ul class="d-flex justify-content-center">
-                                                <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
+                                                <li class="mr-3"><a [routerLink]="['/user/detail']" [queryParams]="{id: item.accountId}" class="text-secondary"><i class="ti-eye"></i></a></li>
                                                 <li><a (click)="deactiveAccount(item.accountId)" class="text-danger"><i class="ti-trash"></i></a></li>
                                             </ul>
                                         </td>
@@ -101,7 +101,7 @@
                                         <td *ngIf="item.status ==='Deactive'"><span class="status-p bg-danger">Deactive</span></td>
                                         <td>
                                             <ul class="d-flex justify-content-center">
-                                                <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
+                                                <li class="mr-3"><a href="#" class="text-secondary"><i class="ti-eye"></i></a></li>
                                                 <li><a (click)="deactiveAccount(item.accountId)" class="text-danger"><i class="ti-trash"></i></a></li>
                                             </ul>
                                         </td>
