--- a/src/app/inside/inside.component.html
+++ b/src/app/inside/inside.component.html
@@ -40,6 +40,7 @@
                                 <li><a href="/hot-products">Hot Products</a></li>
                                 <li><a href="/users">Users</a></li>
                                 <li><a href="/transactions">Transactions</a></li>
+                                <li><a href="/blogs">Blogs</a></li>
                             </ul>
                         </li>
                     </ul>
