--- a/src/app/inside/manage/blog/blog.component.html
+++ b/src/app/inside/manage/blog/blog.component.html
@@ -15,7 +15,7 @@
                 <div class="breadcrumbs-area clearfix">
                     <ul class="breadcrumbs pull-left">
                         <li><a href="/dashboard">Home</a></li>
-                        <li><span>Category</span></li>
+                        <li><span>Blog</span></li>
                     </ul>
                 </div>
             </div>
@@ -36,7 +36,7 @@
         <div class="row">
             <!-- Progress Table start -->
             <div class="col-12 mt-5">
-                <a href="/category/create-edit">
+                <a href="/blog/create-edit">
                     <button type="button" class="btn btn-add">
                         <i class="fa fa-plus-circle"></i>
                         Create
@@ -44,46 +44,49 @@
                 </a>
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="header-title">Category Table</h4>
+                        <h4 class="header-title">Blog Table</h4>
                         <div class="single-table">
                             <div class="table-responsive">
                                 <table class="table table-hover progress-table text-center">
                                     <thead class="text-uppercase">
                                         <tr>
                                             <th scope="col">No</th>
-                                            <th scope="col">Created At</th>
-                                            <th scope="col">Updated At</th>
-                                            <th scope="col">Name</th>
+                                            <th scope="col">Created At <i (click)="sortBy($event, 'timeCre')" class="ti-arrow-down"></i></th>
+                                            <th scope="col">Updated At <i (click)="sortBy($event, 'timeUp')" class="ti-arrow-down"></i></th>
+                                            <th scope="col"></th>
+                                            <th scope="col">Title</th>
                                             <th scope="col">Description</th>
                                             <th scope="col">Status</th>
                                             <th scope="col">Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let item of categoryDataList | paginate: { itemsPerPage: 20, currentPage: p, id: id}, let i = index">
+                                        <tr *ngFor="let item of blogList | paginate: { itemsPerPage: 20, currentPage: p, id: id}, let i = index">
                                             <th scope="row">{{i + 1}}</th>
                                             <td>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</td>
                                             <td>{{item.updatedAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</td>
-                                            <td>{{item.categoryName}}</td>
-                                            <td>{{item.description}}</td>
+                                            <td><img width="50%" src="{{item.image}}" alt=""></td>
+                                            <td>{{item.title}}</td>
+                                            <td>
+                                                <span [innerHTML]="(item.description.length>10) ? (item.description | slice:0:200)+ '...' : (item.description)"></span>
+                                            </td>
                                             <td *ngIf="item.status === 'Active'"><span class="status-p bg-success">Active</span></td>
-                                            <td *ngIf="item.status === 'Deactive'"><span class="status-p bg-secondary">Deactive</span></td>
-                                            <td *ngIf="item.status === 'Deleted'"><span class="status-p bg-danger">Deleted</span></td>
+                                            <td *ngIf="item.status === 'DeActive'"><span class="status-p bg-secondary">Deactive</span></td>
                                             <td>
                                                 <ul class="d-flex justify-content-center">
                                                     <li class="mr-3">
-                                                        <a [routerLink]="['/category/create-edit']" [queryParams]="{id: item.categoryId}" class="text-secondary">
+                                                        <a [routerLink]="['/blog/create-edit']" [queryParams]="{id: item.id}" class="text-secondary">
                                                             <i class="ti-pencil-alt"></i>
                                                         </a>
                                                     </li>
-                                                    <li *ngIf="item.status !== 'Deactive'"><a (click)="deleteCategory(item.categoryId)" class="text-danger"><i class="ti-trash"></i></a>
+                                                    <li *ngIf="item.status !== 'DeActive'"><a (click)="deleteCategory(item.id)" class="text-danger"><i class="ti-trash"></i></a>
                                                     </li>
                                                 </ul>
                                             </td>
                                         </tr>
                                     </tbody>
                                 </table>
-                                <pagination-controls maxSize="5" *ngIf="categoryDataList.length > 1" style="text-align: right" [id]="id" (pageChange)="p = $event">
+                                <pagination-controls maxSize="5" *ngIf="blogList.length > 1" style="text-align: right" [id]="id" (pageChange)="p = $event">
                                 </pagination-controls>
                             </div>
                         </div>
