--- a/src/app/inside/manage/hot-product/hot-product.component.html
+++ b/src/app/inside/manage/hot-product/hot-product.component.html
@@ -61,19 +61,19 @@
                                     <thead class="text-uppercase">
                                         <tr>
                                             <th scope="col">No</th>
-                                            <th scope="col">Created At</th>
-                                            <th scope="col">Updated At</th>
+                                            <th scope="col">Created At <i (click)="sortBy($event, 'timeCre')" class="ti-arrow-down"></i></th>
+                                            <th scope="col">Updated At <i (click)="sortBy($event, 'timeUp')" class="ti-arrow-down"></i></th>
                                             <th scope="col">Product</th>
                                             <th scope="col">Category</th>
                                             <th scope="col">Seller</th>
-                                            <th scope="col">Price</th>
+                                            <th scope="col">Price <i (click)="sortBy($event, 'price')" class="ti-arrow-down"></i></th>
                                             <th scope="col"></th>
                                             <th scope="col">Status</th>
-                                            <th scope="col">Action</th>
+                                            <th scope="col"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let item of hotProductList
+                                        <tr *ngFor="let item of hotProductList| paginate: { itemsPerPage: 20, currentPage: p, id: id}
                                             , let i = index">
                                             <th scope="row">{{i + 1}}</th>
                                             <th>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</th>
@@ -107,6 +107,8 @@
                                         </tr>
                                     </tbody>
                                 </table>
+                                <pagination-controls maxSize="5" *ngIf="hotProductList.length > 1" style="text-align: right" [id]="id" (pageChange)="p = $event">
+                                </pagination-controls>
                             </div>
                         </div>
                     </div>
