--- a/src/app/inside/manage/hot-product/hot-product.component.html
+++ b/src/app/inside/manage/hot-product/hot-product.component.html
@@ -54,7 +54,7 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="header-title">Product Table</h4>
+                        <h4 class="header-title">Hot Product Table</h4>
                         <div class="single-table">
                             <div class="table-responsive">
                                 <table class="table table-hover progress-table text-center">
@@ -89,7 +89,7 @@
                                                 <ul class="d-flex justify-content-center">
                                                     <li class="mr-3">
                                                         <a class="text-secondary">
-                                                            <i class="ti-eye"></i>
+                                                            <i [routerLink]="['/product/detail']" [queryParams]="{id: item.productId}" class="ti-eye"></i>
                                                         </a>
                                                     </li>
                                                     <li *ngIf="item.status=='Active'">
