--- a/src/app/inside/inside.component.html
+++ b/src/app/inside/inside.component.html
@@ -21,12 +21,12 @@
                     <ul class="metismenu" id="menu">
                         <li><a href="/dashboard"><i class="ti-dashboard"></i> <span>Dashboard</span></a></li>
                         <li>
-                            <a routerLink="/product-list"><i class="ti-harddrives"></i>
+                            <a href="/product-list"><i class="ti-harddrives"></i>
                                 <span>Product List</span>
                             </a>
                         </li>
                         <li>
-                            <a routerLink="/transaction-list"><i class="ti-shopping-cart"></i>
+                            <a href="/transaction-list"><i class="ti-shopping-cart"></i>
                                 <span>Transaction List</span>
                             </a>
                         </li>
