--- a/src/app/inside/manage/transaction/transaction.component.html
+++ b/src/app/inside/manage/transaction/transaction.component.html
@@ -54,7 +54,7 @@
                                         <th scope="col">Transporter</th>
                                         <th scope="col">Seller</th>
                                         <th scope="col">Status</th>
-                                        <th></th>
+                                        <th scope="col">Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
