--- a/src/app/inside/seller/my-transactions/my-transactions.component.html
+++ b/src/app/inside/seller/my-transactions/my-transactions.component.html
@@ -37,10 +37,33 @@
         <div class="col-12 mt-5 ">
             <div class="card ">
                 <div class="card-body ">
-                    <h4 class="header-title ">Transaction Table</h4>
+                    <div class="row align-items-center">
+                        <div class="col-sm-6">
+                            <h4 class="header-title ">Transaction Table</h4>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="user-profile pull-right">
+                                <div class="search-box pull-left">
+                                    <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown">
+                                        Filter by status
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" (click)="getSttOrder('all')">All</a>
+                                        <a class="dropdown-item" (click)="getSttOrder('Pending')">Pending</a>
+                                        <a class="dropdown-item" (click)="getSttOrder('Condirmed')">Confirmed</a>
+                                        <a class="dropdown-item" (click)="getSttOrder('Shipping')">Shipping</a>
+                                        <a class="dropdown-item" (click)="getSttOrder('Paid')">Paid</a>
+                                        <a class="dropdown-item" (click)="getSttOrder('Done')">Done</a>
+                                        <a class="dropdown-item" (click)="getSttOrder('Cancel')">Cancel</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="single-table ">
                         <div class="table-responsive ">
-                            <table class="table table-hover progress-table text-center ">
+                            <table class="table table-hover progress-table text-center">
                                 <thead class="text-uppercase ">
                                     <tr>
                                         <th scope="col">No</th>
